# zero-downtime-db-migrations-demo

./: .gitignore  README.md  manage.py  pyproject.toml
zero_downtime_migrations/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
zero_downtime_migrations/migrations/: 0001_initial.py
zero_downtime_migrations/templates/: index.html  order_create.html  order_detail.html  order_list.html
