[project]
name = "zero-downtime-db-migrations-demo"
version = "0.1.0"
description = "Demo"
license = "WTFPL"
readme = "README.md"
dependencies = [
  "Django>=5.2.2,<6.0.0",
]
requires-python = ">=3.10,<4"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[tool.black]
line-length = 120